# hybrid-rocket-design

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  resources.qrc  setup.cfg  setup.py  tox.ini
cea_files/: example.inp
src/hybridrd/: __init__.py  __main__.py  app.py  mainwindow.py
src/hybridrd/CEA/: 710.out  710.plt  B1.txt  B2.txt  B3.txt  C20H42+H2O290%.inp  C20H42+H2O290%.out  C20H42+N2O.inp  C20H42+N2O.out  CHAPMAN.inp  CHAPMAN.out  ETANOL+H2O290%  ETANOL+H2O290%.inp  ETANOL+H2O290%.out  Exercicio 7-9 lista cap 7 comb II.inp  Exercicio 79.inp  GUIfile.txt  GUIfile2.txt  HDPE+ N2O.inp  HDPE+GOx.inp  HDPE+GOx.out  HDPE+GOx.plt  HDPE+H2O290  HDPE+H2O290.inp  HDPE+H2O290.out  HDPE+H2O290.plt  HDPE+N2O.inp  HDPE+N2O.out  HDPE+TETROXIDO  HDPE+TETROXIDO.inp  HDPE+TETROXIDO.out  HDPE+TETROXIDO.plt  KSNU.inp  KSNU.out  KSNU.plt  LAB4_PRP41.inp  LAB4_PRP41.out  Monoprop.out  Monoprop.plt  PARAFINA+GOX  (+71 more)
src/hybridrd/analysis/: __init__.py  cea.py  results.py
src/hybridrd/gui/: __init__.py  display.py  launchwindows.py  menubar.py  resources_rc.py  statusbar.py  tab_widgets.py
src/hybridrd/inputfile/: __init__.py  cea_inputfile.py
src/hybridrd/propellant/: __init__.py  propellant.py  regression_rate_parameters.py
src/hybridrd/templates/: template_cea_input.j2
src/hybridrd/utils/: __init__.py  datautils.py
stylesheets/: darktheme.qss  lighttheme.qss
tests/: __init__.py
tests/test_cea/: __init__.py  test_cea.py  test_cea_inputfile.py  test_cea_results.py  test_propellant.py
tests/test_cea/aux/: test.inp
(+9 files in other folders)
