[metadata]
name = hybridrd
version = 0.1
description = Package intended to project and design hybrid rocket motors.
long_description = file: README.md, LICENSE.txt
license_files = LICENSE.txt
license = GNU General Public License v3.0
platforms = 
    Linux
    Windows
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Researchers and students
    License :: GNU General Public License v3.0
    Operating System :: Unix
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.85

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    numpy
    pandas
    Jinja2
    pyqtgraph
    PyQt5
    wine-ctl;platform_system=='Linux'

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    hybridrd = hybridrd.__main__:main